--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@
 }
 html{
     background-color: #000308;
+    scroll-behavior: smooth;
 }
-
 body{
     color: white;
     min-height: 98vh;
@@ -48,6 +48,7 @@ header {
     height: 800px;
 }
 nav{
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -79,7 +80,10 @@ nav ul li{
     border-radius: 30px;
     font-weight: 600;
 }
-
+.nav_button:hover{
+    background-color: rgba(204, 0, 208, 0.3);
+    color: white;
+}
 @keyframes blur {
     to {
         box-shadow: 0px 5px 50px -5px rgba(10, 11, 37, 0.1) 0px 0px 0px 1px rgba(10, 11, 37, 0.);
@@ -132,7 +136,10 @@ nav ul li{
     border-radius: 40px;
     width: 260px;
 }
-
+.hero_button:hover{
+        background-color: rgba(204, 0, 208, 0.3);
+        color: white;
+    }
 
 /***************    SECTION PRODUCTS   ****************/
 .section_products{
@@ -169,7 +176,7 @@ nav ul li{
     height: 330px;
     background-color: white;
 }
-.product:hover .product_icon_cont{
+/* .product:hover .product_icon_cont{
     border-color: #CC00D0;
 }
 .product:hover h2{
@@ -177,25 +184,98 @@ nav ul li{
 }
 .product:hover p{
     color: #FDAAFF;
+} */
+.product_active h3{
+    color: #CC00D0;
+}
+.product_active p{
+    color: #FDAAFF;
+}
+.product_active .product_icon_cont{
+    border-color: #CC00D0;
 }
 
+/******************    SECTION CELLPHONE   ****************/
+.section_cellphone{
+    position: relative;
+    background-color: #0B0D3B;
+    margin: 60px 120px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    padding-bottom: 80px;
+    border-radius: 20px;
+}
+.section_cellphone::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #CC00D0;
+    z-index: -1;
+    opacity: 0.8;
+    left: -20px;
+    bottom: -30px;
+    border-radius: 20px;
+    filter: blur(40px);
+}
+.section_cellphone img{
+    position: absolute;
+    left: -40px;
+    top: -120px;
+}
+
+.cellphone_separator{
+    width: 1px;
+    height: 277px;
+    background-color: white;
+}
+.cellphone_text{
+    height: 451px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 80px 210px 0px 210px;
+}
+.cellphone_text h2{
+    color: #CC00D0;
+}
+.cellphone_text ul{
+    margin-left: 40px;
+}
+.cellphone_text ul li{
+    color: #FDAAFF;
+}
+.cellphone_text a{
+    width: 200px;
+    text-align: center;
+    color: #CC00D0;
+    border: 2px solid #CC00D0;
+    padding: 10px 40px;
+    border-radius: 30px;
+    font-weight: 600;
+}
+.cellphone_text a:hover{
+    background-color: rgba(204, 0, 208, 0.3);
+    color: white;
+}
 
 
 /******************    SECTION CARDS   ****************/
 .section_cards{
     text-align: center;
-    margin: 0 120px;
+    margin: 140px 120px;
 }
 .cards_container{
     margin: 80px 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 }
 .card{
-    width: 589px;
-    height: 300px;
+    width: 690px;
+    height: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -238,6 +318,7 @@ nav ul li{
 }
 .section_call_to_action h2{
     color: #CC00D0;
+    font-size: 3.75rem;
 }
 .section_call_to_action p{
     width: 700px;
@@ -250,7 +331,10 @@ nav ul li{
     font-size: 2rem;
     font-weight: 700;
 }
-
+.section_call_to_action a:hover{
+    background-color: rgba(204, 0, 208, 0.3);
+    color: white;
+}
 
 /******************    SECTION FOOTER   ****************/
 footer{
