--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/********** General styles ***********/
 @font-face {
     font-family: "Poppins";
     font-weight: 800;
@@ -93,7 +94,7 @@ nav ul li{
 }
 
 
-
+/* Header styles */
 .hero img{
     position: absolute;
     width: 100%;
@@ -142,7 +143,7 @@ nav ul li{
     }
 
 /***************    SECTION PRODUCTS   ****************/
-.section_products{
+.section_products {
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -150,7 +151,8 @@ nav ul li{
     margin: 300px 0px;
     padding: 0 120px;
 }
-.product{
+
+.product {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -159,123 +161,105 @@ nav ul li{
     text-align: center;
     cursor: pointer;
 }
-.product p{
+
+.product p {
     width: 360px;
 }
-.product_icon_cont{
-    border-radius: 100% ;
-    border: 2px solid white;
+
+.product_icon_cont {
+    border-radius: 100%;
+    /* border: 2px solid white; */
     width: 123px;
     height: 123px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.product_separator{
+
+.product_separator {
     width: 2px;
     height: 330px;
     background-color: white;
 }
-/* .product:hover .product_icon_cont{
-    border-color: #CC00D0;
-}
-.product:hover h2{
-    color: #CC00D0;
-}
-.product:hover p{
-    color: #FDAAFF;
-} */
-.product_active h3{
-    color: #CC00D0;
-}
-.product_active p{
-    color: #FDAAFF;
-}
-.product_active .product_icon_cont{
-    border-color: #CC00D0;
+
+.product_icon_cont i {
+
+    font-size: 35px;
+    ;
 }
 
-/******************    SECTION CELLPHONE   ****************/
-.section_cellphone{
+/* animated wheel */
+.product_icon_cont {
     position: relative;
-    background-color: #0B0D3B;
-    margin: 60px 120px;
     display: flex;
-    justify-content: end;
-    align-items: end;
-    padding-bottom: 80px;
-    border-radius: 20px;
-}
-.section_cellphone::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #CC00D0;
-    z-index: -1;
-    opacity: 0.8;
-    left: -20px;
-    bottom: -30px;
-    border-radius: 20px;
-    filter: blur(40px);
-}
-.section_cellphone img{
-    position: absolute;
-    left: -40px;
-    top: -120px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.cellphone_separator{
-    width: 1px;
-    height: 277px;
-    background-color: white;
+.circle-svg {
+    position: absolute;
 }
-.cellphone_text{
-    height: 451px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 80px 210px 0px 210px;
+
+.circle-svg circle {
+    fill: none;
 }
-.cellphone_text h2{
+
+.circle-svg .circle1 {
+    stroke-width: 10px;
+    stroke-dashoffset: 0;
+    stroke: #0B0D3B;
+}
+
+.circle-svg .circle2 {
+    stroke: #CC00D0;
+    stroke-width: 15px;
+    stroke-dasharray: 472;
+    stroke-dashoffset: 500;
+    transition: all 1s ease;
+}
+
+.product:hover .circle-svg .circle2 {
+    stroke-dashoffset: 0;
+}
+
+/* end animated wheel */
+
+.product h3,
+.product,
+.product_icon_cont i {
+
+    transition: all .5s ease;
+}
+
+.product:hover .product_icon_cont i {
     color: #CC00D0;
 }
-.cellphone_text ul{
-    margin-left: 40px;
+
+.product:hover {
+
+    transform: translateY(-20px);
 }
-.cellphone_text ul li{
-    color: #FDAAFF;
-}
-.cellphone_text a{
-    width: 200px;
-    text-align: center;
-    color: #CC00D0;
-    border: 2px solid #CC00D0;
-    padding: 10px 40px;
-    border-radius: 30px;
-    font-weight: 600;
-}
-.cellphone_text a:hover{
-    background-color: rgba(204, 0, 208, 0.3);
-    color: white;
-}
+
 
 
 /******************    SECTION CARDS   ****************/
-.section_cards{
+.section_cards {
     text-align: center;
-    margin: 140px 120px;
+    margin: 0 120px;
 }
-.cards_container{
+
+.cards_container {
     margin: 80px 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
-.card{
-    width: 690px;
-    height: 320px;
+
+.card {
+    width: 589px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -286,23 +270,30 @@ nav ul li{
     text-align: left;
     background-color: #0B0D3B;
     border-radius: 20px;
+    transition: all .5s ease;
 }
-.card h3{
+
+.card h3 {
     color: #CC00D0;
 }
-.card p{
+
+.card p {
     width: 446px;
     color: #FDAAFF;
 }
-.card a{
+
+.card a {
     width: 100%;
     text-align: right;
 }
-.card:hover{
+
+.card:hover {
     filter: drop-shadow(3px 5px 14px #CC00D0);
 }
 
-
+.fa-arrow-right-long {
+    color: #5CD568;
+}
 
 /******************    SECTION CALL TO ACTION   ****************/
 .section_call_to_action{
