--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ nav {
   max-width: 1680px;
   animation: blur linear both;
   animation-timeline: scroll();
-  animation-range: 0 500px;
+  animation-range: 0 450px;
 }
 nav ul {
   display: flex;
@@ -98,36 +98,35 @@ nav ul li {
     box-shadow: 0 0 10px var(--main_color), 0 0 20px var(--main_color), 0 0 40px var(--main_color);
     transition: 1s;
 }
-@keyframes blur {
-  to {
-    box-shadow: 0px 5px 50px -5px rgba(10, 11, 37, 0.1) 0px 0px 0px 1px rgba(10, 11, 37, 0);
-    background: rgba(10, 11, 37, 0.6);
-    backdrop-filter: blur(8px);
-  }
-}
+
 
 /* Header styles */
 .hero img {
   position: absolute;
   width: 100%;
 }
-/* .hero_filter {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 90vh;
-    background-color: rgba(16, 15, 54,0.6);
-} */
 
 .hero_text {
   position: absolute;
-  padding-top: 280px;
+  padding-top: 240px;
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 140px;
+  gap: 40px;
+  transition: all 1s ease;
+  animation: hero_text_animation 1s ease-in;
+}
+
+h1{
+  font-size: 4.25rem;
+}
+#hero_subtitle {
+  color: var(--main_color);
+  font-weight: 700;
+  font-size: 3.75rem;
+  width: 100%;
 }
 .hero_text p {
   width: 680px;
@@ -140,6 +139,7 @@ nav ul li {
   font-weight: 700;
   border-radius: 40px;
   width: 260px;
+  margin-top: 60px;
 }
 
 
@@ -161,6 +161,9 @@ nav ul li {
   justify-content: center;
   text-align: center;
   cursor: pointer;
+}
+.scrolled.product{
+  animation: zoom-in 0.5s ease-in;
 }
 
 .product p {
@@ -428,6 +431,55 @@ footer {
 }
 
 
+
+.hero_rocks {
+  z-index: -2;
+}
+.hero_planet {
+  z-index: -3;
+}
+.hero_bg {
+  z-index: -4;
+}
+
+/************** Keyframes **************/
+
+@keyframes blur {
+  to {
+    box-shadow: 0px 5px 50px -5px rgba(10, 11, 37, 0.1) 0px 0px 0px 1px rgba(10, 11, 37, 0);
+    background: rgba(10, 11, 37, 0.6);
+    backdrop-filter: blur(8px);
+  }
+}
+
+@keyframes hero_text_animation {
+  0% {
+    transform: translateY(700px);
+    opacity: 0;
+  }
+
+  90% {
+    transform: translateY(15px);
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes zoom-in {
+  0%{
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100%{
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
 @keyframes slide-in-left {
   0% {
     -webkit-transform: translateX(-100px);
@@ -492,14 +544,4 @@ footer {
   100% {
     opacity: 1;
   }
-}
-
-.hero_rocks {
-  z-index: -2;
-}
-.hero_planet {
-  z-index: -3;
-}
-.hero_bg {
-  z-index: -4;
 }
