--- a/css/styles.css
+++ b/css/styles.css
@@ -677,6 +677,8 @@ footer {
 }
 
 @media screen and (max-width: 768px){
+
+
   .hamburger_menu_button{
     display: flex;
   }
@@ -694,6 +696,7 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 80px;
     right: -100%;
     top: 0;
     width: 100vw;
@@ -778,7 +781,8 @@ footer {
     padding: 0px 20px;
   }
   .phone_container{
-    margin: 160px 20px;
+    margin: 340px 20px 100px 20px;
+    height: 620px;
   }
   .phone_text {
     margin-top: 0px;
@@ -802,6 +806,18 @@ footer {
 @media screen and (max-width: 360px){
   body{
     font-size: 1rem;
+  }
+  .phone_container{
+    height: 580px;
+  }
+  .card{
+    padding: 30px;
+  }
+  .card h3{
+    font-size: 1.8rem;
+  }
+  .card p{
+    width: 280px;
   }
 
 }
