--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,7 @@ footer {
 
 @keyframes blur {
   to {
-    box-shadow: 0px 5px 50px -5px rgba(10, 11, 37, 0.1) 0px 0px 0px 1px rgba(10, 11, 37, 0);
+    box-shadow: 0px 5px 50px -5px rgba(10, 11, 37, 0.1);
     background: rgba(10, 11, 37, 0.6);
     backdrop-filter: blur(8px);
   }
